--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>JM Tech Center Application Form</title>
+    <script src="https://js.paystack.co/v1/inline-js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+   
     <div id="root"></div>
     <!--
       This HTML file is a template.
